# ROS2

./: README.md
launch/: turtlesim_mimic_launch.py
maps/: maps.pgm  maps.yaml
ros2_ws/: README.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/action_tutorials_cpp/lib/action_tutorials_cpp/: fibonacci_action_client  fibonacci_action_server
ros2_ws/install/action_tutorials_cpp/share/action_tutorials_cpp/: local_setup.sh  package.sh
ros2_ws/install/action_tutorials_interfaces/share/action_tutorials_interfaces/: local_setup.sh  package.sh
ros2_ws/install/cpp_parameter_event_handler/lib/cpp_parameter_event_handler/: parameter_event_handler
ros2_ws/install/cpp_parameter_event_handler/share/cpp_parameter_event_handler/: local_setup.sh  package.sh
ros2_ws/install/cpp_parameters/lib/cpp_parameters/: minimal_param_node
ros2_ws/install/cpp_parameters/share/cpp_parameters/: local_setup.sh  package.sh
ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/cmake/: cpp_pubsubConfig.cmake  export_listener_componentExport-noconfig.cmake  export_talker_componentExport-noconfig.cmake
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/launch/: publisher_subscriber_launch.py
ros2_ws/install/cpp_srvcli/lib/cpp_srvcli/: client  server
ros2_ws/install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.dsv  package.ps1  package.sh
ros2_ws/install/cpp_srvcli/share/cpp_srvcli/cmake/: cpp_srvcliConfig.cmake  export_server_componentExport.cmake
ros2_ws/install/matrix_determinant_service/lib/matrix_determinant_service/: matrix_resolver_client  matrix_resolver_server  matrix_resolver_subscriber
ros2_ws/install/matrix_determinant_service/share/matrix_determinant_service/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/matrix_interface/share/matrix_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/matrix_interface/share/matrix_interface/cmake/: ament_cmake_export_targets-extras.cmake  export_matrix_interface__rosidl_generator_cppExport.cmake  export_matrix_interface__rosidl_generator_pyExport-noconfig.cmake  export_matrix_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_matrix_interface__rosidl_typesupport_fastrtps_cppExport.cmake  (+5 more)
ros2_ws/install/more_interfaces/lib/more_interfaces/: publish_address_book
ros2_ws/install/more_interfaces/share/more_interfaces/: local_setup.sh  package.sh
ros2_ws/install/my_package/share/my_package/: local_setup.sh  package.sh
ros2_ws/install/polygon_base/lib/polygon_base/: area_node
ros2_ws/install/polygon_base/share/polygon_base/: local_setup.sh  package.sh  package.xml
ros2_ws/install/polygon_plugins/share/polygon_plugins/: package.sh  package.xml  plugins.xml
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
ros2_ws/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_parameter_event_handler/: package.xml
ros2_ws/src/cpp_parameter_event_handler/src/: parameter_event_handler.cpp
ros2_ws/src/cpp_parameters/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_parameters/launch/: cpp_parameters_launch.py
ros2_ws/src/cpp_parameters/src/: cpp_parameters_node.cpp
ros2_ws/src/cpp_pubsub/: CMakeLists.txt
ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2_ws/src/matrix_determinant_service/: CMakeLists.txt
ros2_ws/src/matrix_determinant_service/src/: matrix_resolver_client.cpp  matrix_resolver_server.cpp  matrix_resolver_subscriber.cpp
ros2_ws/src/matrix_interface/: CMakeLists.txt  package.xml
ros2_ws/src/more_interfaces/: CMakeLists.txt
ros2_ws/src/more_interfaces/src/: publish_address_book.cpp
ros2_ws/src/my_package/: package.xml
ros2_ws/src/polygon_base/: CMakeLists.txt
ros2_ws/src/polygon_base/include/polygon_base/: regular_polygon.hpp
ros2_ws/src/polygon_base/src/: area_node.cpp
ros2_ws/src/polygon_plugins/src/: polygon_plugins.cpp
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
(+28 files in other folders)
