cmake_minimum_required(VERSION 3.8)
project(more_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)

add_executable(publish_address_book src/publish_address_book.cpp)
ament_target_dependencies(publish_address_book rclcpp)

install(TARGETS
	publish_address_book
	DESTINATION lib/${PROJECT_NAME}
)

set(msg_files
	"msg/AddressBook.msg"
)

rosidl_generate_interfaces(${PROJECT_NAME}
	${msg_files}
)

# make sure we export the message runtime dependency
ament_export_dependencies(rosidl_defualt_runtime)

# in order to use the messages generated in the same package we need to add:
rosidl_get_typesupport_target(cpp_typesupport_target
	${PROJECT_NAME} rosidl_typesupport_cpp
)
# this code line only need if we want to use custom messages from the same package
target_link_libraries(publish_address_book "${cpp_typesupport_target}")

ament_package()
